# src/TaskFlow.Server/Requests/CreateAssignmentRequest.cs
@@ -7,5 +7,7 @@ public sealed class CreateAssignmentRequest
     public string From { get; set; } = "";
     public string Title { get; set; } = "";
     public Dictionary<string, object?>? Parameters { get; set; }
+    public string Join { get; set; } = "";
+    public CreateAssignmentRequest? OnAllCompleted { get; set; }
     public AssigneeRequest To { get; set; } = new();
 }
